Fix to allow voting down in comments
The "qa-c-item-footer" element was overlapping the Voting Down button in the comments. This fixes it.

--- a/qa-theme/Donut-theme/css/donut.css
+++ b/qa-theme/Donut-theme/css/donut.css
@@ -3268,6 +3268,8 @@ a.qa-browse-cat-link:visited {
 }
 .qa-q-view .qa-voting {
   width: 75px;
+  position: relative;
+  z-index: 1;
 }
 @media only screen and (max-width: 767px) {
   .qa-q-view .qa-voting {
